--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 	<div id="App">
-		Hello World!!!
+		Hello World!!!!
 	</div>
 	<script type="text/javascript" src="js/bundle.js"></script>
 </body>
